improving navbar dropdownmenu, fixing some layout issues

--- a/public/styles/specifications.css
+++ b/public/styles/specifications.css
@@ -47,8 +47,8 @@ footer .logo {
 }
 
 th.w-short {
-    width: 140px;
+    width: 125px;
 }
 th.w-long {
-    width: 220px;
+    width: 250px;
 }
